@@ -1,3 +1,5 @@
+- better support for component inheritance
+
 version 0.4.2
 - first version of make file generator
 - MICO 2.3.11 adaptations
